# chat-rs

./: .env  .gitmodules  Cargo.toml
migrations/2021-01-20-090050_messages/: up.sql
migrations/2021-01-20-145358_messages/: down.sql  up.sql
src/: data.rs  db.rs  main.rs  schema.rs
src/static/: index.html  main.js  style.css
