[package]
name = "chat_app"
version = "0.1.0"
authors = ["magey3 <magey3333@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = {version = "3.3.2", features = ["openssl"]}
actix-files = "0.5.0"
serde = "1.0.119"
chrono = {version = "0.4.19", features = ["serde"]}
openssl = "0.10.32"
diesel = {version = "1.4.5", features = ["postgres", "chrono"]}
dotenv = "0.15.0"
